--- a/wrappers/js/package.json
+++ b/wrappers/js/package.json
@@ -2,7 +2,7 @@
   "name": "node-gammu-json",
   "version": "0.0.1",
   "description": "A Node.js wrapper for the gammu-json messaging utility",
-  "main": "main.js",
+  "main": "lib/main.js",
   "scripts": {
     "test": "echo 'No tests available yet' && exit 1"
   },
