Fix Makefile link flags for statically-linked libjsmn.

--- a/dependencies/jsmn/Makefile
+++ b/dependencies/jsmn/Makefile
@@ -9,10 +9,10 @@ libjsmn.a: jsmn.o
 %.o: %.c jsmn.h
 	$(CC) -c $(CFLAGS) $< -o $@
 
-test: jsmn_test
-	./jsmn_test
+test: jsmn-test
+	./jsmn-test
 
-jsmn_test: jsmn_test.o
+jsmn_test: jsmn-test.o
 	$(CC) -L. -ljsmn $< -o $@
 
 jsmn_test.o: jsmn_test.c libjsmn.a
